IDEA-391898 [java-intentions] Get rid of DefaultQuickFixProvider
Also: cleanup: do not attempt to create ImportClassFix for REFERENCE_AMBIGUOUS and EXPRESSION_EXPECTED
Also: do not call createVariableActions for methods

GitOrigin-RevId: c8763e05dc11d09ea570f32f67c3d24ae7577865